--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "database"
     ],      
     "license": "Apache-2.0",
-    "version": "dev-bugfix",
+    "version": "dev-aw",
     "authors": [
         {
             "name": "liu21st",
